--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
 
 /* FONTS */
 
-textarea,
+#textarea,
 .note-text,
 .quote-text,
 #copyright {
@@ -63,7 +63,7 @@ header {
 
 #clipboard-wrapper,
 #icon-wrapper,
-textarea {
+#textarea {
     width: 50%;
 }
 #clipboard-wrapper,
@@ -131,7 +131,7 @@ textarea {
     padding: .7rem;
     margin: 0;
 }
-textarea {
+#textarea {
     display: block;
     font-size: 1.5rem;
     letter-spacing: .05rem;
@@ -145,11 +145,11 @@ textarea {
     margin: .5rem auto 2rem;
     resize: none;
 }
-textarea:focus {
+#textarea:focus {
     outline: 1px solid rgba(28, 33, 62, 0.14);
     box-shadow: 0px 0px 5px 4px rgb(90, 231, 189);
 }
-textarea::selection {
+#textarea::selection {
     background: rgba(255, 167, 38, 0.43);
 }
 .fade-in {
@@ -461,7 +461,7 @@ footer {
 @media only screen and (max-width: 1000px) {
     #clipboard-wrapper,
     #icon-wrapper,
-    textarea {
+    #textarea {
         width: 65%;
     }
 }
@@ -482,10 +482,10 @@ footer {
 
     #clipboard-wrapper,
     #icon-wrapper,
-    textarea {
+    #textarea {
         width: 80%;
     }
-    textarea {
+    #textarea {
         font-size: 1.3rem;
     }
     #converter-text {
@@ -513,7 +513,7 @@ footer {
     #icon-wrapper {
         margin: 1rem auto 0;
     }
-    textarea {
+    #textarea {
         font-size: 1.1rem;
         height: 120px;
     }
